// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="sc-jKJlTe jrLLJc"
  >
    <div
      class="sc-eNQAEJ gQGBHU"
    >
      <div
        class="sc-hMqMXs cXfhSh"
      >
        <div
          class="sc-hSdWYo gqaLmR"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-jAaTju fNCBho"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kEYyzF gfWKdx"
      >
        <div
          class="sc-hMqMXs cXfhSh"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kEYyzF gfWKdx"
        >
          <pre
            class="sc-iRbamj gcctTo"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-gPEVay eQYmiW"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="sc-jKJlTe jrLLJc"
  >
    <div
      class="sc-eNQAEJ gQGBHU"
    >
      <div
        class="sc-hMqMXs cXfhSh"
      >
        <div
          class="sc-hSdWYo gqaLmR"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-jAaTju fNCBho"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kEYyzF gfWKdx"
      >
        <div
          class="sc-hMqMXs cXfhSh"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kEYyzF gfWKdx"
        >
          <pre
            class="sc-iRbamj gcctTo"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-gPEVay eQYmiW"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-eNQAEJ gQGBHU"
    >
      <div
        class="sc-hMqMXs cXfhSh"
      >
        <div
          class="sc-hSdWYo gqaLmR"
        >
          WARNING yy0
        </div>
        <h4
          class="sc-jAaTju fNCBho"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-kEYyzF gfWKdx"
      >
        <div
          class="sc-hMqMXs cXfhSh"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-kEYyzF gfWKdx"
        >
          <pre
            class="sc-iRbamj gcctTo"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-gPEVay eQYmiW"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
